--- a/Server/package.json
+++ b/Server/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "server",
+  "name": "skillcompass-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "AI Talent Management Platform Backend",
   "main": "server.js",
-  "type": "module",
-    "scripts": {
+  "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  
   "dependencies": {
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.1"
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "express-validator": "^7.0.1",
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.0.1"
   }
 }
