ai integrated and extracting the data from resume frontend

--- a/Client/.env
+++ b/Client/.env
@@ -1,3 +1,4 @@
+VITE_GEMINIAI_API_KEY=AIzaSyCacJpodQxHwxG6n6kAoTduyzD97s7QLWI
 # SkillCompass Frontend Environment Variables
 
 # API Configuration
@@ -9,3 +10,4 @@ VITE_HR_PASSWORD=admin123
 
 # Development Settings
 VITE_NODE_ENV=development
+
