--- a/Server/package.json
+++ b/Server/package.json
@@ -16,7 +16,8 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.0.1",
     "moment": "^2.29.4",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "vercel": "^48.2.9"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
